--- a/app/components/AddResearchArticle.css
+++ b/app/components/AddResearchArticle.css
@@ -1,14 +1,14 @@
-/* components/AddResearchArticle.module.css */
 .container {
-padding: auto;
-margin: auto;
+  padding: auto;
+  margin: auto;
 }
 
 header {
   display: flex;
   margin-bottom: -50px;
   align-items: center;
-  /* justify-content: space-around; */
+  width: 100%;
+  justify-content: space-between;
 }
 
 header > nav {
@@ -53,21 +53,27 @@ h3 {
 }
 
 nav ul {
-  justify-content: left;
+  justify-content: center;
   list-style: none;
   display: flex;
-  gap: 20px;
+  gap: 25px;
 }
 
 nav li {
   cursor: pointer;
+ 
+}
+ul.nav-links{
+ 
+  justify-content: center;
+  align-items: center;
+  margin: 0%;
+  padding: 0%;
 }
 
 main {
-  
   justify-content: center;
   text-align: center;
-  
 }
 
 form {
@@ -116,7 +122,48 @@ form {
   border: none;
 }
 
-/* Media Queries for Responsiveness */
+.hamburger {
+  display: none;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.hamburger span {
+  height: 3px;
+  width: 25px;
+  background: black;
+  margin: 4px;
+  border-radius: 5px;
+}
+
+.hamburger {
+  display: none;
+}
+
+.hamburger-label {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hamburger-label span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px;
+  background-color: #333;
+}
+
+#hamburger-checkbox {
+  display: none;
+}
+
+#hamburger-checkbox:checked ~ nav ul {
+  display: flex;
+}
+
 
 @media (max-width: 950px) {
   .cc {
@@ -141,7 +188,7 @@ form {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 650px) {
   .formGroup input {
     width: 90%;
   }
@@ -153,8 +200,24 @@ form {
   }
 
   nav ul {
+    display: none;
     flex-direction: column;
     gap: 10px;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+  }
+
+  nav ul li {
+    width: 100%;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+
+  .hamburger-label {
+    display: flex;
   }
 
   .cc {
